// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPoint renders with color blast-off 1`] = `
<circle
  className="ax-data-point ax-data-point--blast-off ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color crash-course 1`] = `
<circle
  className="ax-data-point ax-data-point--crash-course ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color critical-mass 1`] = `
<circle
  className="ax-data-point ax-data-point--critical-mass ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color deep-thought 1`] = `
<circle
  className="ax-data-point ax-data-point--deep-thought ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color electric-dreams 1`] = `
<circle
  className="ax-data-point ax-data-point--electric-dreams ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color event-horizon 1`] = `
<circle
  className="ax-data-point ax-data-point--event-horizon ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color extraterrestrial 1`] = `
<circle
  className="ax-data-point ax-data-point--extraterrestrial ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color fantastic-voyage 1`] = `
<circle
  className="ax-data-point ax-data-point--fantastic-voyage ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color forbidden-planet 1`] = `
<circle
  className="ax-data-point ax-data-point--forbidden-planet ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color future-shock 1`] = `
<circle
  className="ax-data-point ax-data-point--future-shock ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color giant-leap 1`] = `
<circle
  className="ax-data-point ax-data-point--giant-leap ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color ground-control 1`] = `
<circle
  className="ax-data-point ax-data-point--ground-control ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color luna-dust 1`] = `
<circle
  className="ax-data-point ax-data-point--luna-dust ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color moon-lagoon 1`] = `
<circle
  className="ax-data-point ax-data-point--moon-lagoon ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color new-horizon 1`] = `
<circle
  className="ax-data-point ax-data-point--new-horizon ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color outer-limits 1`] = `
<circle
  className="ax-data-point ax-data-point--outer-limits ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color paradise-lost 1`] = `
<circle
  className="ax-data-point ax-data-point--paradise-lost ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color primeval-soup 1`] = `
<circle
  className="ax-data-point ax-data-point--primeval-soup ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color rocky-planet 1`] = `
<circle
  className="ax-data-point ax-data-point--rocky-planet ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color serene-sea 1`] = `
<circle
  className="ax-data-point ax-data-point--serene-sea ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color solar-rust 1`] = `
<circle
  className="ax-data-point ax-data-point--solar-rust ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color space-invader 1`] = `
<circle
  className="ax-data-point ax-data-point--space-invader ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color space-oddity 1`] = `
<circle
  className="ax-data-point ax-data-point--space-oddity ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color sun-maker 1`] = `
<circle
  className="ax-data-point ax-data-point--sun-maker ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color terra-form 1`] = `
<circle
  className="ax-data-point ax-data-point--terra-form ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with color tiny-clanger 1`] = `
<circle
  className="ax-data-point ax-data-point--tiny-clanger ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with defaultProps 1`] = `
<circle
  className="ax-data-point ax-data-point--tiny-clanger ax-data-point--solid"
  cx={12}
  cy={12}
  strokeWidth={4}
/>
`;

exports[`DataPoint renders with radius 1`] = `
<circle
  className="ax-data-point ax-data-point--tiny-clanger ax-data-point--solid"
  cx={12}
  cy={12}
  r={10}
  strokeWidth={4}
/>
`;
